[package]
name = "bitcoin-rust"
version = "0.1.0"
authors = ["Prahalad Belavadi <github@belavadi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
# secp256k1 = "0.20.2"
bitcoin_hashes = "0.9"
secp256k1 = {version = "0.20.1", features = ["rand", "bitcoin_hashes"]}

